--- a/app/src/main/res/layout/lesson_cell_view.xml
+++ b/app/src/main/res/layout/lesson_cell_view.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp">
+    android:layout_weight="1"
+    android:gravity="center" >
 
     <TextView
         android:id="@+id/lessonTextView"
@@ -12,8 +13,7 @@
     <Space
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_weight="1" >
-    </Space>
+        android:layout_weight="1" />
     <TextView
         android:id="@+id/subjectTextView"
         android:layout_width="wrap_content"
@@ -22,8 +22,7 @@
     <Space
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_weight="1" >
-    </Space>
+        android:layout_weight="1" />
     <TextView
         android:id="@+id/teacherTextView"
         android:layout_width="wrap_content"
@@ -32,8 +31,7 @@
     <Space
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_weight="1" >
-    </Space>
+        android:layout_weight="1" />
     <TextView
         android:id="@+id/roomTextView"
         android:layout_width="wrap_content"
@@ -42,8 +40,7 @@
     <Space
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_weight="1" >
-    </Space>
+        android:layout_weight="1" />
     <TextView
         android:id="@+id/infoTextView"
         android:layout_width="wrap_content"
