--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@drawable/background">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:ignore="ContentDiscription"
+        android:id="@+id/backgroundImageView"
+        android:background="@drawable/background"/>
     <com.studios146.de.stundenplan24.ScheduleTableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="visible"
         android:id="@+id/schedule_main" />
-</LinearLayout>
+</RelativeLayout>
