--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
-
-    <com.studios146.de.stundenplan24.ScheduleTableLayout
-        android:id="@+id/schedule_main"
+    <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible"
-        android:orientation="vertical"
-        android:weightSum="8" />
+        android:id = "@+id/scroll"
+        android:fillViewport="true">
+        <com.studios146.de.stundenplan24.ScheduleTableLayout
+            android:id="@+id/schedule_main"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
+    </HorizontalScrollView>
 </LinearLayout>
