--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
-    <HorizontalScrollView
+    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/schedule_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id = "@+id/scroll"
-        android:fillViewport="true">
-        <com.studios146.de.stundenplan24.ScheduleTableLayout
-            android:id="@+id/schedule_main"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
-    </HorizontalScrollView>
+        android:visibility="visible"
+        android:orientation="horizontal"
+        android:weightSum="1"/>
 </RelativeLayout>
