--- a/app/src/main/res/layout/layout_schedule.xml
+++ b/app/src/main/res/layout/layout_schedule.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/schedule_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="visible"
     android:orientation="horizontal"
-    android:weightSum="1"
-    android:background="@android:color/holo_green_light"/>
+    android:weightSum="1"/>
