--- a/app/src/main/res/layout/lesson_cell_view.xml
+++ b/app/src/main/res/layout/lesson_cell_view.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"
     android:gravity="center">
-
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_weight=".5" />
     <TextView
         android:id="@+id/lessonTextView"
         android:layout_width="wrap_content"
@@ -46,4 +49,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Info" />
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_weight=".5" />
 </LinearLayout>
