--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,17 +4,20 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@drawable/background"
+    tools:context=".MainActivity">
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refresh_location"
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
+
         <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/schedule_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="visible"
             android:orientation="horizontal"
-            android:weightSum="1"/>
+            android:visibility="visible"
+            android:weightSum="1" />
     </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
