--- a/app/src/main/res/layout/schedule_tablecolumn.xml
+++ b/app/src/main/res/layout/schedule_tablecolumn.xml
@@ -3,7 +3,9 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_weight="1"
-    android:weightSum="8"
-    android:orientation="vertical">
+    android:background="#CCAAAAAA"
+    android:orientation="vertical"
+    android:padding="20dp"
+    android:weightSum="8">
 
 </LinearLayout>
